fix: Dodanie zmiennych środowiskowych OLLAMA_URL i QDRANT_HOST do kontenera Agent1

--- a/agents/agent1_student/docker-compose.yml
+++ b/agents/agent1_student/docker-compose.yml
@@ -11,6 +11,9 @@ services:
     environment:
       - COLLECTION=agent1_student
       - NODERED_URL=http://node-red:1880
+      - OLLAMA_URL=http://ollama:11434
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
 
 networks:
   ai_network:
