feat: Agent1 - pełna implementacja RAG + logowanie + źródła; Agent2-5 - API do komunikacji z Agent1
- Reorganizacja: skrypty zarządzania bazą wiedzy przeniesione do helpers/
- Knowledge Manager CLI: interfejs do zarządzania bazą wiedzy (parse, load, verify, check)
- Agent1 RAG: poprawiony import query_logger (helpers.), dodano sources do odpowiedzi API
- Agent1 app.py: /api/chat zwraca sources z RAG (documents, score, category)
- Agent2-5: zmienione na proxy do Agent1 (komunikacja przez AGENT1_URL)
- Agent2-5: uproszczone requirements (tylko FastAPI + httpx)
- Agent2-5: docker-compose z AGENT1_URL=http://agent1_student:8001
- Dokumentacja: docs_agent1/knowledge.md - pełna dokumentacja bazy wiedzy

--- a/agents/agent3_analytics/docker-compose.yml
+++ b/agents/agent3_analytics/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       - ai_network
     environment:
-      - COLLECTION=agent3_stats
+      - AGENT1_URL=http://agent1_student:8001
 
 networks:
   ai_network:
