--- a/Open_WebUI/docker-compose.yml
+++ b/Open_WebUI/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   open-webui:
-    image: ghcr.io/open-webui/open-webui:main
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: open-webui
     restart: unless-stopped
 
