chore: Aktualizacja konfiguracji Docker i zależności
- Synchronizacja docker-compose.yml dla agent1_student
- Aktualizacja Open_WebUI do użycia agent1_student jako backend
- Aktualizacja requirements.txt
- Poprawki w agent1_flow.json

--- a/Open_WebUI/docker-compose.yml
+++ b/Open_WebUI/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "3000:8080"
 
     environment:
-      # Przekierowanie na agent1_student z RAG zamiast bezpośrednio Ollama
+      # Połączenie do agent1_student dla RAG
       - OLLAMA_BASE_URL=http://agent1_student:8000
       
       # Domyślny model
