--- a/agents/agent1_student/docker-compose.yml
+++ b/agents/agent1_student/docker-compose.yml
@@ -6,14 +6,15 @@ services:
       - "8001:8000"
     networks:
       - ai_network
-    extra_hosts:
-      - "ollama:172.18.0.1"
     environment:
       - COLLECTION=agent1_student
       - NODERED_URL=http://node-red:1880
       - OLLAMA_URL=http://ollama:11434
       - QDRANT_HOST=qdrant
       - QDRANT_PORT=6333
+      - WORKFLOW_FILE=/app/agent1_flow.json
+    volumes:
+      - ./agent1_flow.json:/app/agent1_flow.json:ro
 
 networks:
   ai_network:
