feat: Kompletny system automatycznego deployment + security hardening dla nowego VPS
- Stworzono folder deployment/ z pełnym setupem bezpieczeństwa
- secure.sh: fail2ban, UFW firewall, SSH hardening, network security
- geo-blocking.sh: EU-only access, IP ranges whitelist
- monitoring-alerts.sh: Email alerts, health monitoring, security audits
- setup-new-vps.sh: Interactive wizard dla pełnego setup
- docker-compose.yml: Centralizowana orchestracja wszystkich serwisów
- deploy.sh (Linux) + deploy.ps1 (Windows): Automatyczne wdrożenie
- Szerokie testy: health-check.sh, test-system.sh, backup.sh, restore.sh
- Makefile: Skróty dla często używanych komend
- Dokumentacja: SECURITY.md, INSTALL.md, README_DEPLOYMENT.md
- chatbot.service: Systemd service dla autostartu
- crontab.example: Automatyzacja backupów i monitorowania

Szczegóły dotyczące bezpieczeństwa:
 fail2ban z banami 1h po 3 próbach
 UFW firewall - dostęp tylko z VPN (IPv4 + IPv6)
 SSH port 2222, key auth only, no root login
 SYN cookies, IP spoofing protection
 Automatic security updates codziennie
 Geo-blocking dla UE + weekly updates
 Email alerts na adam.siehen@outlook.com
 Health monitoring co 4 godziny
 Daily security audits

System jest production-ready i gotów do wdrożenia na świeże VPS.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ __pycache__/
 *.pyd
 *.env
 *.venv
+venv/
+.venv/
+env/
+ENV/
 
 # Docker
 **/docker-compose.override.yml
@@ -23,9 +27,32 @@ ollama/models/
 qdrant/data/
 qdrant/backups/
 
+# Backups
+backups/
+*.tar.gz
+*.backup
+*.bak
+
+# Logs
+*.log
+logs/
+
 # VS Code
 .vscode/
 
 # system Windows
 Thumbs.db
 Desktop.ini
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Linux
+*~
+.directory
+
+# Deployment temporary files
+.deployment/
+.temp/
