refactor: Move node-red to separate docker-compose, remove from main stack
- Removed node-red service from main docker-compose.yml to unblock agent1_student startup
- Moved node-red configuration to separate nodered/docker-compose.yml for independent operation
- Removed node-red dependencies from agent1_student service
- agent1_student now only depends on qdrant and ollama (service_healthy)
- node-red can be started separately after main services stabilize with:
  docker-compose -f nodered/docker-compose.yml up -d

--- a/nodered/docker-compose.yml
+++ b/nodered/docker-compose.yml
@@ -2,12 +2,24 @@ services:
   node-red:
     image: nodered/node-red:latest
     container_name: node-red
+    restart: unless-stopped
     ports:
-      - "1880:1880"
+      - "${NODERED_PORT:-1880}:1880"
     volumes:
       - nodered_data:/data
     networks:
       - ai_network
+    environment:
+      - NODE_ENV=production
+      - FLOWS=flows.json
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:1880/"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+    # Removed depends_on to allow independent startup
+    # After main services (qdrant, ollama) are healthy, start this with:
+    # docker-compose -f nodered/docker-compose.yml up -d
 
 volumes:
   nodered_data:
