docs: Dodanie maintainerów do deployment automation plików

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,3 +72,10 @@ jobs:
       - name: Notify on failure
         if: failure()
         run: echo "Deployment failed - check GitHub Actions logs"
+
+---
+
+## Maintainers
+
+- **Adam Siehen** - GitHub Actions workflow, VPN integration, deployment orchestration
+- **Patryk Boguski** - Deployment scripts, VPS security hardening
